--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
