--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
     "chokidar-cli": "^2.1.0",
+    "dayjs": "^1.9.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.35",
     "prop-types": "^15.7.2",
@@ -22,7 +23,8 @@
     "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "predeploy": "npm run build",
